[package]
name = "cwf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = "1.0.137"
rouille = "3.5.0"
kuchiki = "0.8.1"

swc = "0.179.1"
swc_ecma_parser = "0.104.0"
swc_ecma_codegen = "0.107.0"
swc_atoms = "0.2.11"
swc_common = "0.18.1"
swc_ecma_ast = "0.78.0"
swc_ecma_transforms_base = "0.84.1"
swc_ecma_utils = "0.85.0"
swc_ecma_visit = "0.64.0"
swc_ecma_transforms_typescript = "0.116.0"
crossbeam-channel = "0.4.0"
notify = "5.0.0-pre.15"
rand = "0.8.5"
regex = "1.5.5"
mime_guess = "2.0.4"